syntax = "proto3";

package zmk.keymap;

message Request {
    oneof request_type {
        bool get_keymap = 1;
        SetLayerBindingRequest set_layer_binding = 2;
        bool check_unsaved_changes = 3;
        bool save_changes = 4;
        bool discard_changes = 5;
        bool get_physical_layouts = 6;
        uint32 set_active_physical_layout = 7;
        MoveLayerRequest move_layer = 8;
    }
}

message Response {
    oneof response_type {
        Keymap get_keymap = 1;
        SetLayerBindingResponse set_layer_binding = 2;
        bool check_unsaved_changes = 3;
        bool save_changes = 4;
        bool discard_changes = 5;
        PhysicalLayouts get_physical_layouts = 6;
        SetActivePhysicalLayoutResponse set_active_physical_layout = 7;
        MoveLayerResponse move_layer = 8;
    }
}

message Notification {
    oneof notification_type {
        bool unsaved_changes_status_changed = 1;
    }
}

enum SetLayerBindingResponse {
    SUCCESS = 0;
    INVALID_LOCATION = 1;
    INVALID_BEHAVIOR = 2;
    INVALID_PARAMETERS = 3;
}

message SetActivePhysicalLayoutResponse {
    oneof result {
        Keymap ok = 1;
        SetActivePhysicalLayoutErrorCode err = 2;
    }
}

enum MoveLayerErrorCode {
    MOVE_LAYER_ERR_SUCCESS = 0;
    MOVE_LAYER_ERR_GENERIC = 1;
    MOVE_LAYER_ERR_INVALID_LAYER = 2;
    MOVE_LAYER_ERR_INVALID_DESTINATION = 3;
}

message MoveLayerResponse {
    oneof result {
        Keymap ok = 1;
        MoveLayerErrorCode err = 2;
    }
}

enum SetActivePhysicalLayoutErrorCode {
    GENERIC = 0;
    INVALID_LAYER_INDEX = 1;
}

message SetLayerBindingRequest {
    int32 layer = 1;
    int32 key_position = 2;

    BehaviorBinding binding = 3;
}

message MoveLayerRequest {
    uint32 layer = 1;
    uint32 dest = 2;
}

message Keymap {
    repeated Layer layers = 1;
}

message Layer {
    string name = 1;
    repeated BehaviorBinding bindings = 2;
}

message BehaviorBinding {
    sint32 behavior_id = 1;
    uint32 param1 = 2;
    uint32 param2 = 3;
}

message PhysicalLayouts {
    uint32 active_layout_index = 1;
    repeated PhysicalLayout layouts = 2;
}

message PhysicalLayout {
    string name = 1;
    repeated KeyPhysicalAttrs keys = 2;
}

message KeyPhysicalAttrs {
    sint32 width = 1;
    sint32 height = 2;
    sint32 x = 3;
    sint32 y = 4;
    sint32 r = 5;
    sint32 rx = 6;
    sint32 ry = 7;
}